DuPont DevSB/src/objects/QATest_Script__c.object
<CustomObject>
    <fields>
        <fullName>Comments_Notes__c</fullName>
        <label>Comments / Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <description>Used for DPS UAT reporting</description>
        <label>% Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Run_Verdict__c</fullName>
        <defaultValue>&quot;Never Run&quot;</defaultValue>
        <label>Last Run Verdict</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_to_be_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs to be Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POST_CONDITIONS__c</fullName>
        <label>POST CONDITIONS</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PRE_CONDITIONS__c</fullName>
        <label>PRE-CONDITIONS</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_User_Story__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related User Story</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>QATest Scripts</relationshipLabel>
        <relationshipName>QATest_Scripts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEST_STEPS__c</fullName>
        <label>TEST STEPS</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Priority__c</fullName>
        <label>Test Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Critical</fullName>
                </value>
                <value>
                    <fullName>1 - High</fullName>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
                <value>
                    <fullName>4 - Ad hoc/Nice to Have</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Script_Description__c</fullName>
        <label>Test Script Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Script_Name__c</fullName>
        <label>Test Script Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test_Script_Type__c</fullName>
        <label>Test Script Type</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acceptance Test</fullName>
                    <default>true</default>
                    <label>Acceptance Test</label>
                </value>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Regression</fullName>
                </value>
                <value>
                    <fullName>UI/UX</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT_LEADER__c</fullName>
        <label>UAT LEADER</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andrew Boen</fullName>
                </value>
                <value>
                    <fullName>Benjamin Greenberg</fullName>
                </value>
                <value>
                    <fullName>Bill Paplham</fullName>
                </value>
                <value>
                    <fullName>Brian Murphy</fullName>
                </value>
                <value>
                    <fullName>Catherine Congress</fullName>
                </value>
                <value>
                    <fullName>Cheryl Jeanes</fullName>
                </value>
                <value>
                    <fullName>Deborah Piekarski</fullName>
                </value>
                <value>
                    <fullName>Deborah Pyle</fullName>
                </value>
                <value>
                    <fullName>Denise Zizas</fullName>
                </value>
                <value>
                    <fullName>Fabiano Miranda</fullName>
                </value>
                <value>
                    <fullName>FX Belottini</fullName>
                </value>
                <value>
                    <fullName>Giada Menda</fullName>
                </value>
                <value>
                    <fullName>Herman Lopez</fullName>
                </value>
                <value>
                    <fullName>Ilona Ivanova</fullName>
                </value>
                <value>
                    <fullName>Kathleen Saerens</fullName>
                </value>
                <value>
                    <fullName>Kathryn Varela</fullName>
                </value>
                <value>
                    <fullName>Kirk Florey</fullName>
                </value>
                <value>
                    <fullName>Lindy Brunson</fullName>
                </value>
                <value>
                    <fullName>Lisa McShane</fullName>
                </value>
                <value>
                    <fullName>Lohit Shringi</fullName>
                </value>
                <value>
                    <fullName>Luciana Kelty</fullName>
                </value>
                <value>
                    <fullName>Martha Barrera</fullName>
                </value>
                <value>
                    <fullName>Michael Dubnansky</fullName>
                </value>
                <value>
                    <fullName>Nathalie Florin</fullName>
                </value>
                <value>
                    <fullName>Pam Brenneman</fullName>
                </value>
                <value>
                    <fullName>Patricia Wolfe</fullName>
                </value>
                <value>
                    <fullName>Ruth Ann Delaney</fullName>
                </value>
                <value>
                    <fullName>SalesforceQA</fullName>
                </value>
                <value>
                    <fullName>Sandra Beckwith</fullName>
                </value>
                <value>
                    <fullName>Sarah Doggrell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QATest Script</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Related_User_Story__c</columns>
        <columns>Test_Priority__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Corporate_Package_Tests_All</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Test_Script_Description__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>Corporate</value>
        </filters>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>Package</value>
        </filters>
        <label>Corporate Package Tests - All</label>
    </listViews>
    <listViews>
        <fullName>Corporate_Packages_Defects</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Related_User_Story__c</columns>
        <columns>Last_Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>Corporate Package</value>
        </filters>
        <label>Corporate Packages Tests</label>
    </listViews>
    <listViews>
        <fullName>Corteva</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Comments_Notes__c</columns>
        <columns>Test_Script_Description__c</columns>
        <columns>Related_User_Story__c</columns>
        <columns>Test_Priority__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_User_Story__c</field>
            <operation>equals</operation>
            <value>W-002647</value>
        </filters>
        <label>Corteva HR Test Scripts</label>
    </listViews>
    <listViews>
        <fullName>Created_this_week</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Test_Script_Description__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/12/2017 12:00 AM</value>
        </filters>
        <label>Created this week</label>
    </listViews>
    <listViews>
        <fullName>DPS_Tests_All</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Test_Script_Description__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>DPS</value>
        </filters>
        <label>DPS Tests - All</label>
    </listViews>
    <listViews>
        <fullName>DPS_Tests_DayInTheLife</fullName>
        <columns>NAME</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>startsWith</operation>
            <value>DPS</value>
        </filters>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>DITL</value>
        </filters>
        <label>DPS Tests - DayInTheLife</label>
    </listViews>
    <listViews>
        <fullName>DPS_Tests_DayInTheLife_Jagminder</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>startsWith</operation>
            <value>DPS</value>
        </filters>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>DITL</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Juan</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Jagminder</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Vishnu</value>
        </filters>
        <label>DPS Tests - DayInTheLife - Jagminder</label>
    </listViews>
    <listViews>
        <fullName>DPS_Tests_DayInTheLife_Juan</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>startsWith</operation>
            <value>DPS</value>
        </filters>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>DITL</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Juan</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Jagminder</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Vishnu</value>
        </filters>
        <label>DPS Tests - DayInTheLife - Juan</label>
    </listViews>
    <listViews>
        <fullName>DPS_Tests_DayInTheLife_Vishnu</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>startsWith</operation>
            <value>DPS</value>
        </filters>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>DITL</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Juan</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Jagminder</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Vishnu</value>
        </filters>
        <label>DPS Tests - DayInTheLife - Vishnu</label>
    </listViews>
    <listViews>
        <fullName>DPS_Tests_Manual_Config</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Test_Script_Description__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>startsWith</operation>
            <value>DPS -</value>
        </filters>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>Manual Config</value>
        </filters>
        <label>DPS Tests - Manual Config</label>
    </listViews>
    <listViews>
        <fullName>DPS_Tests_Metadata</fullName>
        <columns>NAME</columns>
        <columns>Last_Run_Verdict__c</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Test_Script_Description__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Last_Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>DPS - Metadata</value>
        </filters>
        <label>DPS Tests - Metadata</label>
    </listViews>
    <listViews>
        <fullName>DPS_UAT_Tests_All</fullName>
        <columns>NAME</columns>
        <columns>UAT_LEADER__c</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <columns>Complete__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>DPSuat</value>
        </filters>
        <filters>
            <field>Last_Run_Verdict__c</field>
            <operation>notEqual</operation>
            <value>Inactive,out of scope,passed</value>
        </filters>
        <label>DPS UAT Tests - All</label>
    </listViews>
    <listViews>
        <fullName>DPS_UAT_Tests_Remaining</fullName>
        <columns>NAME</columns>
        <columns>UAT_LEADER__c</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>DPSuat</value>
        </filters>
        <filters>
            <field>Last_Run_Verdict__c</field>
            <operation>notContain</operation>
            <value>Inactive,out of scope,passed,completed</value>
        </filters>
        <label>DPS UAT Tests - Remaining</label>
    </listViews>
    <listViews>
        <fullName>DPSuat_Tests_DayInTheLife_Corian</fullName>
        <columns>NAME</columns>
        <columns>Test_Script_Name__c</columns>
        <columns>Needs_to_be_Updated__c</columns>
        <columns>Last_Run_Date__c</columns>
        <columns>Last_Run_Verdict__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>startsWith</operation>
            <value>DPSuat</value>
        </filters>
        <filters>
            <field>Test_Script_Name__c</field>
            <operation>contains</operation>
            <value>Corian</value>
        </filters>
        <label>DPSuat Tests - DayInTheLife - Corian</label>
    </listViews>
    <nameField>
        <displayFormat>QATEST-{0000}</displayFormat>
        <label>Test Script ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QATest Scripts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>